[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/coin.gd" type="Script" id=1]
[ext_resource path="res://art/coin/coin_2.png" type="Texture" id=2]
[ext_resource path="res://art/coin/coin_4.png" type="Texture" id=3]
[ext_resource path="res://art/coin/coin_6.png" type="Texture" id=4]
[ext_resource path="res://art/coin/coin_3.png" type="Texture" id=5]
[ext_resource path="res://art/coin/coin_1.png" type="Texture" id=6]
[ext_resource path="res://art/coin/coin_5.png" type="Texture" id=7]
[ext_resource path="res://art/coin/coin_7.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.4289

[node name="coin" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 32
collision_mask = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4.57695, -12.0647, 5.01968, -12.0757, 5.93877, -11.2004, 5.98254, -6.0797, 6.38771, -4.31633, 10.2716, -3.71632, 10.0528, -0.127481, 8.91488, 0.485243, 8.95864, 8.88838, 5.01968, 9.93877, 2.00185, 12.9347, -2.0267, 12.9149, -5.52722, 9.06055, -8.85424, 8.93214, -9.07307, 0.00381279, -10.0797, 0.00381279, -9.91308, -3.43916, -7.79325, -4.09704, -5.87813, -6.03593, -5.96581, -10.6758 )

[node name="erp_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collision_area" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_area"]
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="collision_area" to="." method="_on_collision_area_body_entered"]
